# dmstudio-rm

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  HANDOFF.md  Holes3D_Tutorial.ipynb  LICENSE.txt  README.md  diagnose_project.py  dmstudio_tutorial.ipynb  environment.yml  generate_wrappers.py  integration_test.py  mcp_server.py  pyproject.toml  quick_test.py  requirements.txt  run_tests.ipynb  setup.py  setup_env.bat  setup_env.ps1  start_jupyter.bat  stress_test.py
datamine_help/: README.md
datamine_help/3DTutorial/: README.md  global_dummy_page.md
datamine_help/StudioRM/: 3d overlay group properties.md  3d overlay.md  3d solid dialog.md  3d_templates.md  3d_templates_export.md  3d_templates_import.md  Copy of digitise-mode-switch.md  Copy of griddc.md  InsertOutlineDialog.md  README.md  Search-Results.md  abort-string-tracing.md  accmlt.md  add attribute dialog.md  add columns wizard - column styles.md  add columns wizard - compositing parameters.md  add columns wizard - data columns.md  add columns wizard - select column type.md  add columns wizard - select table.md  add columns wizard.md  add-dependency-string.md  add-grid.md  add-segment-to-string.md  add-zintersect-to-string.md  add_template_dialog.md  addcolumn.md  adddd.md  addmod.md  addoverlaydialog.md  addtri.md  adjust-string-in-ore.md  adjust-to-gradient.md  advanced-estimation.md  advanced_string_design.md  aed.md  alfnum.md  align-section.md  als-coreviewer.md  anisoang.md  annot-arrow-settings.md  (+1512 more)
datamine_help/StudioRM_GeoMod_Tutorial/: README.md  global_dummy_page.md
datamine_help/StudioRM_GradeEst_Tutorial/: Glossary.md  README.md  RM_Introduction.md  global_dummy_page.md
datamine_help/Studio_DataPresTutorial/: EM_Introduction.md  README.md  global_dummy_page.md
datamine_help/Studio_Macros_Tutorial/: README.md
datamine_help/Studio_ScriptingTutorial/: README.md
dmstudio/: __init__.py  agent.py  agent_rules.md  bootstrap.py  command_registry.py  dialog.py  dm_io.py  dmcommands.py  dmcommands_generated.py  dmfiles.py  dmfiles_generated.py  initialize.py  mcp_server.py  notebook_builder.py  sandbox.py  special.py  superprocess.py  version.py
docs/: pypi_publishing_guide.md
docs/adr/: 0001-exclude-interactive-gui-commands.md
examples/: Studio_RM_3.1_Examples.ipynb  dmstudio_tutorial.ipynb  studio_rm_31_example.py
scratch/: find_copy.py  patch_join_diffrn.py  patch_notebook.py  read_outputs.py  rebuild_notebook.py  restore_and_patch_notebook.py  test_extra2.py
tests/: diagnose_project.py  generate_collections.py  generate_wrappers.py  initialize_com.mac  integration_test.py  quick_test.py  restructure_case_studies.py  run_sandbox_tests.py  stress_test.py  studio_macro_init.py  test_workflow.py
tutorials/: Grade_Estimation_Examples.ipynb  Holes3D_Tutorial.ipynb  Project.rmproj  drillhole_visualization.html
tutorials/collections/: accmlt_example.ipynb  append_example.ipynb  cokrig_example.ipynb  compdh_example.ipynb  copy_example.ipynb  copymod_example.ipynb  count_example.ipynb  delete_example.ipynb  diffrn_example.ipynb  estima_example.ipynb  extra_example.ipynb  holes3d_example.ipynb  ijkgen_example.ipynb  inpfil_example.ipynb  join_example.ipynb  mgsort_example.ipynb  modtra_example.ipynb  output_example.ipynb  protom_example.ipynb  selcop_example.ipynb  seldel_example.ipynb  (+4 more)
(+3657 files in other folders)
