[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dmstudio"
version = "2.0-beta"
description = "Python module for Datamine Studio scripting"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sean Horan", email = "sean.horan@rpacan.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.9"
dependencies = [
    "pywin32",
    "numpy",
    "pandas",
]

[project.urls]
Homepage = "https://github.com/nazabrory/dmstudio"

[tool.setuptools]
packages = ["dmstudio"]
include-package-data = true

[tool.setuptools.package-data]
dmstudio = ["LICENCES.txt", "README.md"]
