[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dmstudio"
version = "2.0.0b1"
description = "Python module for Datamine Studio RM scripting with AI agent capabilities"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.9"
dependencies = [
    "pywin32",
    "numpy",
    "pandas",
    "nbformat",
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/nazabrory/dmstudio"

[tool.setuptools]
packages = ["dmstudio"]
include-package-data = true

[tool.setuptools.package-data]
dmstudio = ["LICENSE.txt", "README.md"]
