[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dmstudio-rm"
version = "2.0.0b6"
description = "Python module for Datamine Studio RM scripting with AI agent capabilities"
readme = "README.md"
license = {text = "GPL-3.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.9"
dependencies = [
    "pywin32",
    "numpy",
    "pandas",
    "nbformat",
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/nazabrory/dmstudio-rm"

[project.scripts]
dmstudio-mcp = "dmstudio.mcp_server:main"

[tool.setuptools]
packages = ["dmstudio"]
include-package-data = true

[tool.setuptools.package-data]
dmstudio = ["LICENSE.txt", "README.md"]

